--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "exa-js": "^1.3.3",
     "framer-motion": "^11.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "marked": "^15.0.4",
     "next": "15.1.2",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
