改造了接口，以适配后面部署到vercel上，保证开发和部署环境都可以正常访问url

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,81 @@
+# Environment Variables Configuration
 # Copy this file to .env.local and fill in the values
+
+# ============================================================================
+# API Keys (Required)
+# ============================================================================
+
+# Mediastack API key for fetching news data
 MEDIASTACK_API_KEY=your_media_stack_key
+
+# Exa API key for content search and analysis
 EXA_API_KEY=your_exa_key
+
+# OpenAI API key for AI-powered content analysis
 OPENAI_API_KEY=your_openai_key
+
+# ============================================================================
+# Database & Caching (Required)
+# ============================================================================
+
+# Upstash Redis configuration for caching and rate limiting
 UPSTASH_REDIS_REST_URL=your_upstash_redis_rest_url
 UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
-NEXT_PUBLIC_GA_ID=your_google_analytics_id
+
+# ============================================================================
+# Application URLs (Smart Detection)
+# ============================================================================
+
+# Base URL for the application
+# 
+# 🚀 SMART URL DETECTION:
+# The application now uses intelligent URL detection that works across environments:
+# 
+# 1. Vercel Deployment (Recommended - No manual configuration needed):
+#    - VERCEL_PROJECT_PRODUCTION_URL: Automatically set for custom domains
+#    - VERCEL_URL: Automatically set for *.vercel.app domains
+#    - These are provided by Vercel automatically
+#
+# 2. Manual Configuration (Fallback):
+#    - Use BASE_URL for custom deployments or override automatic detection
+#    - For local development, use http://localhost:3000
+#    - For production, use your actual domain (https://yourdomain.com)
+#
+# 3. Development Environment:
+#    - Defaults to http://localhost:3000 if no other URL is detected
+#
+# Note: In most cases, you don't need to set BASE_URL when deploying to Vercel!
 BASE_URL=http://localhost:3000
+
+# ============================================================================
+# Security & Authentication
+# ============================================================================
+
+# Header name for API authentication (keep as is)
 EPIGRAM_SECRET_HEADER_NAME=X-Epigram-Secret
+
+# Secret key for protecting cron/populate endpoints
 EPIGRAM_CRON_SECRET=your_secret_string
+
+# ============================================================================
+# Application Settings
+# ============================================================================
+
+# Number of news articles to fetch per topic
 PER_TOPIC_NEWS_LIMIT=5
+
+# Google Analytics ID (optional)
+NEXT_PUBLIC_GA_ID=your_google_analytics_id
+
+# ============================================================================
+# Vercel-Specific Variables (Automatically set by Vercel)
+# ============================================================================
+# These variables are automatically provided by Vercel - DO NOT set manually:
+# 
+# VERCEL=1
+# VERCEL_ENV=production|preview|development
+# VERCEL_URL=xxx.vercel.app
+# VERCEL_PROJECT_PRODUCTION_URL=yourdomain.com (if custom domain is configured)
+# VERCEL_REGION=xxx
+# 
+# The application will automatically detect and use these for URL generation
